<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/create_account_bg"
    tools:context=".ui.createaccountscreen.CreateAccountFragment">

    <ImageButton
        android:id="@+id/backToSignIn"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="52dp"
        android:background="@drawable/shape_rounded_back_btn"
        android:src="@drawable/back_btn_detail"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/sign_in_image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginTop="42dp"
        android:src="@drawable/create_account"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/welcome_tv"
        style="@style/GetStartedText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="178dp"
        android:layout_marginEnd="30dp"
        android:text="@string/get_started"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        style="@style/HeadlineText2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/by_creating_a_free_account"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/welcome_tv" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textLayoutCA"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="30dp"
        android:hint="@string/full_name"
        app:hintTextColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sign_in_image"
        tools:ignore="HardcodedText">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inputTextCA"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/layout_bg"
            android:drawableEnd="@drawable/user"
            android:inputType="textEmailAddress"
            android:textColor="@color/black" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textLayoutCA2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="30dp"
        android:hint="Valid email"
        app:hintTextColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textLayoutCA"
        tools:ignore="HardcodedText">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inputTextCA2"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/layout_bg"
            android:drawableEnd="@drawable/mail"
            android:inputType="textEmailAddress"
            android:textColor="@color/black" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/phoneTextLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="30dp"
        android:hint="@string/phone_number"
        app:hintTextColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textLayoutCA2">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/phoneTextEditText"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/layout_bg"
            android:drawableEnd="@drawable/smartphone"
            android:inputType="number"
            android:textColor="@color/black" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordTextLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="30dp"
        android:hint="@string/strong_password"
        app:hintTextColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/phoneTextLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passwordTextEditText"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/layout_bg"
            android:drawableEnd="@drawable/lock"
            android:inputType="number"
            android:textColor="@color/black" />

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatCheckBox
        android:id="@+id/checkBoxCA"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="33dp"
        android:layout_marginTop="555dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/check_box_tv"
        style="@style/CheckboxText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="33dp"
        android:layout_marginTop="18dp"
        android:text="@string/by_checking_the_box_you_agree_to_our"
        app:layout_constraintStart_toStartOf="@id/passwordTextLayout"
        app:layout_constraintTop_toBottomOf="@id/passwordTextLayout" />

    <TextView
        android:id="@+id/terms_tv"
        style="@style/CheckboxText2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="3dp"
        android:layout_marginTop="18dp"
        android:text="@string/terms"
        app:layout_constraintStart_toEndOf="@id/check_box_tv"
        app:layout_constraintTop_toBottomOf="@id/passwordTextLayout" />

    <TextView
        android:id="@+id/check_box_tv2"
        style="@style/CheckboxText3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="3dp"
        android:layout_marginTop="18dp"
        android:text="@string/and"
        app:layout_constraintStart_toEndOf="@id/terms_tv"
        app:layout_constraintTop_toBottomOf="@id/passwordTextLayout" />

    <TextView
        android:id="@+id/condition_tv"
        style="@style/CheckboxText4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="3dp"
        android:layout_marginTop="18dp"
        android:text="@string/conditions"
        app:layout_constraintStart_toEndOf="@id/check_box_tv2"
        app:layout_constraintTop_toBottomOf="@id/passwordTextLayout" />

    <LinearLayout
        android:id="@+id/create_account_linear"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/layout_liner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/check_box_tv">

        <TextView
            style="@style/ButtonText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="130dp"
            android:layout_marginTop="10dp"
            android:text="@string/next"
            android:textStyle="bold" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="17dp"
            android:background="@color/transparent"
            android:src="@drawable/vector" />

    </LinearLayout>

    <TextView
        android:id="@+id/already_member_tv"
        style="@style/AlreadyMemberText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="130dp"
        android:layout_marginTop="15dp"
        android:text="@string/already_a_member"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/create_account_linear" />

    <TextView
        android:id="@+id/loginText"
        style="@style/LoginInText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="13dp"
        android:text="@string/login_in"
        app:layout_constraintStart_toEndOf="@id/already_member_tv"
        app:layout_constraintTop_toBottomOf="@id/create_account_linear" />

</androidx.constraintlayout.widget.ConstraintLayout>